# sycl-ray-tracer

./: .clang-format  .clangd  .envrc  .gitignore  CMakeLists.txt  PLAN.md  README.md  benchmark.csv  benchmark.py  benchmark_avg.csv  benchmark_raw.csv  demo.cpp
assets/: cube.glb  triangle.glb
src/: app.hpp  camera.hpp  formatters.hpp  image_manager.hpp  main.cpp  material.hpp  model.hpp  render.cpp  render.hpp  render_context.hpp  render_megakernel.cpp  render_megakernel.hpp  render_wavefront.cpp  render_wavefront.hpp  scene.cpp  scene.hpp  tiny_gltf.h  trace_ray.hpp  util.hpp  xorshift.hpp
